Fixed discord button on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -87,18 +87,13 @@
     height: 32px;
 }
 
-/* .instagram-btn {
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-    border: 1px solid #285AEB !important;
-} */
-
 .instagram-btn {
     padding: 0 !important;
 }
 
 .instagram-btn img {
-    width: 71px;
-    height: 71px;
+    width: 52px;
+    height: 52px;
 }
 
 .discord-btn {
@@ -110,6 +105,11 @@
 }
 
 @media only screen and (min-width: 768px) {
+    .instagram-btn img {
+        width: 71px;
+        height: 71px;
+    }
+
     .discord-btn {
         padding: 12px;
     }
